# rag-engine

./: .gitignore  AGENTS.md
.cache/go-build/: trim.txt
.cache/go-build/00/: 001d65897fa2dbfb13a8c49b788a11831307d13edd9a66e75c40a3b7400ea062-a  0049d52cef169037d5ca59ffa412cae8f08df18c2cde2f2d97dd40d72c86e8b8-a  006f552f6fa3d9d8a1d5dfa41d5a125c3715cba89ea026aa4a8be527ad9ddfa2-a  00712023d4dfcfcb02863be82eb72f2029a41c17a232efdf6d43165e3fed3b88-a  00ad542fdf6e1954b2f2976f97280ff59a0d4d00bad0eecaaa32b24ab30f5ae3-d  00aea6e3495889bb6524b04d014edaebfa7e3298c980dcfe551da72db1a3b3b4-a  00bbedae4280bf8c37e0a7f6e399e0b3bd37dabeb8916a752f63fa4c718e17a5-a  00d872510c3cb0e53b1978fce714dfc195f66d3bc2c49077759d4e298c935034-a  00e21e858f82d0a2a4edb2a44288a205993dd83c1e58780cd7fc1a6f5239b9ad-a
.cache/go-build/01/: 01043514baa7a7942c8c493a571dc78aada14852bce8ef66ab033072854e6eb6-a  0109532a2d05e15e720a9ca3473945aaf980d3c8c87a1910542f0c31b0cabf54-a  012fda31c39de955aa0799dca62fa6226e542dab41af86c1a4a606447ab1259e-d  01485bca503e02be2e8a59e83bed811e7379e44986fdaab55a1c7ab5c2b23805-a  01cf395c11863ab565ce13714313d24e8c1efcbebe491cc99d0cfec9d07092ee-a  01efcc18faa0fc88f0239db305ace87548e740664f7897681a177ede51c0da01-a  01fa111e9ef28011dee355562d6832cccb6b204dad3ae25b8518e60c964ea55b-a
.cache/go-build/02/: 0220bdea657cf5f88db168821aac9bbcd091bc8695e14ffb7d7f4081ed72f048-a  0230add49d88707c1fa6cfefe1b6dd50dede4785b78c5ffd8b3f7f56f3923d41-a  024f0c7f7cc0436fbda3df9c1eba9b7f2745ee6bd71a5f96093098e1ea1682ca-a  025b3aa933d2c0158652b4f12fd885bfba040988c15acfe69c9d1127d2be2507-a  026967fb597eafbda5d8f4c4adf7f12cf62c80e47d830c3bebbc0770653d313e-a  02d8af57a0e0d1f5657ecd112eff387766260e95414628b8cd3d7e2b142b454a-a  02e52a31e36b0086b678d98154a577993ef12746278c0e261dca47b260b43202-a  02fcc0c4164e2b9ceff1238cd7d824be3070a93ada57652571b1c8f10fc3f2ba-d
.cache/go-build/03/: 03148f500f12d762e2c35893a799ad6dab66d9ab316ac322536f88532bf318d9-a  03274980f7886900b82b6a0b24591dcc6c891ba3057bb2c7f52012f26fa18904-a  03491f023a096e6e082823ff5a8f14b29006bf9430a5ebf64947b513d325a1a6-a  03629d22438c04a1e835197b21acce048d3679de88df2aa56ab517b3d69fd224-a  037e7513ac463d2412f19c7dd78b71515ae0fb4abb12f8c2d0e6a86447e7df67-d  039dad17220c41c3bb2ba50530aea80e125c58fbb0d0a809e5a891f0119598f8-a  03f2468a876e2f03c6a30b7fbee847959d2c5ed9cd49b86895604256769ccd12-a  03f2b585c8521b8e3792ba09adc4037118a47567b0b2e25e73606ec2b969e4c3-a
.cache/go-build/04/: 04246001a46aaa81c797ac2a3ca3f8d32ea3710b25c713ab4144d5eb86026812-a  04271df98aef244d597a2c8f677c80042bda38565d39a14a2273bff87575ef8e-a  043157f11b2ec3c958d2ed626714cec3a486f7da02faf349dbc50da74825253f-a  044de1d9cc4ad290158e71795b991ac5b9ef399143f9fa701d39197e259eda35-d  044fd9f7013d2d488a115991b95854f436a55b86e427013ee117a669a8c5f61a-a  04578c754b049d56cbadc4dc0ee71b1df8ca7305074924b275110550f65eb4ca-a  04698bb3e2b0cad73bf5c597d612c749df1903b437981e4ea38bc859c09ce560-a  0471434951517b06c66e66e09b67e675da6be301dc0ea142909f25a62ceaab2d-a  048336f4c5a6c0549caf113e4d24ce9e7ea703347b3934b62677c3f595c8660a-a  049386487c5b0c6a5fe3112083be458255ce73ea54fcc990a5882ee65b484d92-a  04b5c42b805ebf910853b2c05aef7d13eb934d2fe739a599325025d5b75b8c8e-a  04d3d1b1f0fa3ffac3e1df44127616471e6009ee285f5e5bd51d54087f05c981-a  04dd8111d702d73fe058dec7c87f93099595b8e6528482bb35e302ec8d30dd0d-a  04e4906de6dc8a6954fb94b3d4203bb1c1097ad4a9be9f2c1fd0684c13a6b819-d  04f79da23e20c5935c1af19e32b2e51e583a90bb857b4b3b88193a63d8a837a5-a
.github/workflows/: windows-backend.yml
.tools/protoc-34.1-win64/: readme.txt
engine/: .dockerignore  Dockerfile  README.md  build.bat  build.sh  config.example.yaml  doctor.ps1  smoke.ps1
engine/docs/: frontend-api.md  winui-grpc-v1.md
engine/go/: go.mod  go.sum
engine/proto/: engine.pb.go  engine.proto  engine_grpc.pb.go  go.mod
engine/rust/: Cargo.toml
engine/rust/crates/ai_engine_daemon/: Cargo.toml  build.rs
engine/rust/crates/ai_engine_daemon/src/: main.rs
engine/rust/crates/chunking/: Cargo.toml
engine/rust/crates/chunking/src/: lib.rs
engine/rust/crates/context_engine/: Cargo.toml
engine/rust/crates/context_engine/src/: bridge.rs  engine.rs  graph.rs  lib.rs  memory.rs  model.rs  uri.rs
engine/rust/crates/context_engine/tests/: context_engine.rs
engine/rust/crates/context_server/: Cargo.toml
engine/rust/crates/context_server/src/: lib.rs  main.rs
engine/rust/crates/embedding/: Cargo.toml
engine/rust/crates/embedding/src/: lib.rs
engine/rust/crates/rag_engine/: Cargo.toml
engine/rust/crates/rag_engine/src/: lib.rs
engine/rust/crates/runtime_engine/: Cargo.toml
engine/rust/crates/runtime_engine/src/: lib.rs
engine/rust/crates/storage/: Cargo.toml
engine/rust/crates/storage/src/: lib.rs
engine/rust/crates/training_engine/: Cargo.toml
engine/rust/crates/training_engine/src/: lib.rs
engine/scripts/: ensure_protoc.ps1  ensure_protoc.sh
(+2475 files in other folders)
