[workspace]
members = [
    "crates/chunking",
    "crates/embedding",
    "crates/storage",
    "crates/rag_engine",
    "crates/runtime_engine",
    "crates/training_engine",
    "crates/ai_engine_daemon",
    "crates/context_engine",
    "crates/context_server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["AI Engine Team"]
