[package]
name = "ai_engine_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
chunking = { path = "../chunking" }
context_engine = { path = "../context_engine" }
embedding = { path = "../embedding" }
prost = "0.14"
prost-types = "0.14"
runtime_engine = { path = "../runtime_engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage = { path = "../storage" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport"] }
tonic-health = "0.14"
tonic-prost = "0.14"
training_engine = { path = "../training_engine" }
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
protoc-bin-vendored = "3.2"
tonic-prost-build = "0.14"
