[package]
name = "context_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
lancedb = "0.27"
arrow-array = "57.2"
arrow-schema = "57.2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
url = "2.5"
tempfile = "3.10"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "json", "chrono"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
