[package]
name = "embedding"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
fastembed = { version = "=5.13.3", optional = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
ndarray = "0.15"
log = "0.4"

[features]
default = ["fastembed-provider"]
fastembed-provider = ["dep:fastembed"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
