[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
arrow-array = "57.2"
arrow-schema = "57.2"
futures = "0.3"
lancedb = "0.27.2"
tokio = { version = "1.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.20"
